reorganizacion de archivos

--- a/ETL/etl_credits.ipynb
+++ b/ETL/etl_credits.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "4  [{'credit_id': '52fe44959251416c75039ed7', 'de...  11862  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
        "[45439 rows x 3 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,14 +343,434 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Con el fin de preparar los dataset, para las funciones 5 y 6. Realizare el merge corresponiente con el df de peliculas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\clari\\AppData\\Local\\Temp\\ipykernel_1896\\3333128663.py:1: DtypeWarning: Columns (6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df_movies= pd.read_csv('movies_limpio.csv')\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_movies= pd.read_csv('movies_limpio.csv')\n",
+    "from pandas.core.reshape.merge import merge\n",
+    "#me da un error en el tipo de datos, por lo que convertire la columna id a numerico\n",
+    "df_movies['id'] = pd.to_numeric(df_movies['id'], errors='coerce')# los que no son numericos los paso a nan\n",
+    "df_movies = df_movies.dropna(subset=['id'])#aqui elimino los nan\n",
+    "df_movies['id'] = df_movies['id'].astype(int)#convierto a entero\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "actor = cast_df.merge(df_movies[['title', \"return\", 'id']], how=\"left\", on=\"id\")  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#elimino columnas innecesarias\n",
+    "actor.drop(columns=['cast_id','credit_id','gender','order','profile_path'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>character</th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>title</th>\n",
+       "      <th>return</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Woody (voice)</td>\n",
+       "      <td>862</td>\n",
+       "      <td>Tom Hanks</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>12.451801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Buzz Lightyear (voice)</td>\n",
+       "      <td>862</td>\n",
+       "      <td>Tim Allen</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>12.451801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mr. Potato Head (voice)</td>\n",
+       "      <td>862</td>\n",
+       "      <td>Don Rickles</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>12.451801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Slinky Dog (voice)</td>\n",
+       "      <td>862</td>\n",
+       "      <td>Jim Varney</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>12.451801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Rex (voice)</td>\n",
+       "      <td>862</td>\n",
+       "      <td>Wallace Shawn</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>12.451801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>562524</th>\n",
+       "      <td></td>\n",
+       "      <td>227506</td>\n",
+       "      <td>Iwan Mosschuchin</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>562525</th>\n",
+       "      <td></td>\n",
+       "      <td>227506</td>\n",
+       "      <td>Nathalie Lissenko</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>562526</th>\n",
+       "      <td></td>\n",
+       "      <td>227506</td>\n",
+       "      <td>Pavel Pavlov</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>562527</th>\n",
+       "      <td></td>\n",
+       "      <td>227506</td>\n",
+       "      <td>Aleksandr Chabrov</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>562528</th>\n",
+       "      <td></td>\n",
+       "      <td>227506</td>\n",
+       "      <td>Vera Orlova</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>562529 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      character      id               name      title  \\\n",
+       "0                 Woody (voice)     862          Tom Hanks  Toy Story   \n",
+       "1        Buzz Lightyear (voice)     862          Tim Allen  Toy Story   \n",
+       "2       Mr. Potato Head (voice)     862        Don Rickles  Toy Story   \n",
+       "3            Slinky Dog (voice)     862         Jim Varney  Toy Story   \n",
+       "4                   Rex (voice)     862      Wallace Shawn  Toy Story   \n",
+       "...                         ...     ...                ...        ...   \n",
+       "562524                           227506   Iwan Mosschuchin        NaN   \n",
+       "562525                           227506  Nathalie Lissenko        NaN   \n",
+       "562526                           227506       Pavel Pavlov        NaN   \n",
+       "562527                           227506  Aleksandr Chabrov        NaN   \n",
+       "562528                           227506        Vera Orlova        NaN   \n",
+       "\n",
+       "           return  \n",
+       "0       12.451801  \n",
+       "1       12.451801  \n",
+       "2       12.451801  \n",
+       "3       12.451801  \n",
+       "4       12.451801  \n",
+       "...           ...  \n",
+       "562524        NaN  \n",
+       "562525        NaN  \n",
+       "562526        NaN  \n",
+       "562527        NaN  \n",
+       "562528        NaN  \n",
+       "\n",
+       "[562529 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "actor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>job</th>\n",
+       "      <th>name</th>\n",
+       "      <th>title</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>budget</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>return</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>862</td>\n",
+       "      <td>Director</td>\n",
+       "      <td>John Lasseter</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>1995-10-30</td>\n",
+       "      <td>30000000</td>\n",
+       "      <td>373554033.0</td>\n",
+       "      <td>12.451801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>862</td>\n",
+       "      <td>Screenplay</td>\n",
+       "      <td>Joss Whedon</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>1995-10-30</td>\n",
+       "      <td>30000000</td>\n",
+       "      <td>373554033.0</td>\n",
+       "      <td>12.451801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>862</td>\n",
+       "      <td>Screenplay</td>\n",
+       "      <td>Andrew Stanton</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>1995-10-30</td>\n",
+       "      <td>30000000</td>\n",
+       "      <td>373554033.0</td>\n",
+       "      <td>12.451801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>862</td>\n",
+       "      <td>Screenplay</td>\n",
+       "      <td>Joel Cohen</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>1995-10-30</td>\n",
+       "      <td>30000000</td>\n",
+       "      <td>373554033.0</td>\n",
+       "      <td>12.451801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>862</td>\n",
+       "      <td>Screenplay</td>\n",
+       "      <td>Alec Sokolow</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>1995-10-30</td>\n",
+       "      <td>30000000</td>\n",
+       "      <td>373554033.0</td>\n",
+       "      <td>12.451801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>464358</th>\n",
+       "      <td>67758</td>\n",
+       "      <td>Original Music Composer</td>\n",
+       "      <td>Richard McHugh</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>464359</th>\n",
+       "      <td>67758</td>\n",
+       "      <td>Director of Photography</td>\n",
+       "      <td>João Fernandes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>464360</th>\n",
+       "      <td>227506</td>\n",
+       "      <td>Director</td>\n",
+       "      <td>Yakov Protazanov</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>464361</th>\n",
+       "      <td>227506</td>\n",
+       "      <td>Producer</td>\n",
+       "      <td>Joseph N. Ermolieff</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>464362</th>\n",
+       "      <td>461257</td>\n",
+       "      <td>Director</td>\n",
+       "      <td>Daisy Asquith</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>464363 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            id                      job                 name      title  \\\n",
+       "0          862                 Director        John Lasseter  Toy Story   \n",
+       "1          862               Screenplay          Joss Whedon  Toy Story   \n",
+       "2          862               Screenplay       Andrew Stanton  Toy Story   \n",
+       "3          862               Screenplay           Joel Cohen  Toy Story   \n",
+       "4          862               Screenplay         Alec Sokolow  Toy Story   \n",
+       "...        ...                      ...                  ...        ...   \n",
+       "464358   67758  Original Music Composer       Richard McHugh        NaN   \n",
+       "464359   67758  Director of Photography       João Fernandes        NaN   \n",
+       "464360  227506                 Director     Yakov Protazanov        NaN   \n",
+       "464361  227506                 Producer  Joseph N. Ermolieff        NaN   \n",
+       "464362  461257                 Director        Daisy Asquith        NaN   \n",
+       "\n",
+       "       release_date    budget      revenue     return  \n",
+       "0        1995-10-30  30000000  373554033.0  12.451801  \n",
+       "1        1995-10-30  30000000  373554033.0  12.451801  \n",
+       "2        1995-10-30  30000000  373554033.0  12.451801  \n",
+       "3        1995-10-30  30000000  373554033.0  12.451801  \n",
+       "4        1995-10-30  30000000  373554033.0  12.451801  \n",
+       "...             ...       ...          ...        ...  \n",
+       "464358          NaN       NaN          NaN        NaN  \n",
+       "464359          NaN       NaN          NaN        NaN  \n",
+       "464360          NaN       NaN          NaN        NaN  \n",
+       "464361          NaN       NaN          NaN        NaN  \n",
+       "464362          NaN       NaN          NaN        NaN  \n",
+       "\n",
+       "[464363 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "director = crew_df.merge(df_movies[['title', 'release_date','budget', 'revenue','return', 'id']], how='left', on='id')  \n",
+    "director.drop(columns=['credit_id','department','gender','profile_path'], inplace=True)\n",
+    "director"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "#exporto los df creados a csv (elimine las columnas innecesarias ya que render solo nos da 512mb)\n",
-    "cast_df.to_csv('cast.csv')\n",
-    "crew_df.to_csv('crew.csv')"
+    "director.to_csv('director.csv')\n",
+    "actor.to_csv('actor.csv')"
    ]
   }
  ],
